--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "slim/slim": "2.*",
         "ql/mcp-corp-account": "*",
-        "twig/twig": "1.*"
+        "twig/twig": "1.*",
+        "knplabs/github-api": "1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
