Template and config cleanup.
- Updating sync handler.
- Gui improvements.
- Config fixes

--- a/app/config.prod.yml
+++ b/app/config.prod.yml
@@ -4,8 +4,9 @@ slim:
 db.dsn:         "mysql:host=prod.example.com;dbname=hal9000;charset=utf8"
 db.user:        "placeholder"
 db.pass:        "placeholder"
-build.user:     "bschiefer"
-rsync.user:     "bschiefer"
+build.user:     "hal9000"
+build.dir:      "/var/spool/hal9000"
+rsync.user:     "placeholder"
 github.token:   ""
 github.baseurl: "http://git/api/v3/"
 ldap.host:      "ldap.example.com"
