--- a/app/config.dev.yml
+++ b/app/config.dev.yml
@@ -1,12 +1,12 @@
 slim:
   debug:        true
   mode:         "development"
-db.dsn:         "mysql:host=test.example.com;dbname=hal9000_test;charset=utf8"
-db.user:        "placeholder"
-db.pass:        "placeholder"
-build.user:     "hal9000test"
-build.dir:      "/var/spool/hal9000test"
-rsync.user:     "placeholder"
+db.dsn:         "mysql:host=localhost;dbname=hal;charset=utf8"
+db.user:        "root"
+db.pass:        ""
+build.user:     "mcolf"
+build.dir:      "/tmp"
+rsync.user:     "mcolf"
 github.token:   ""
 github.baseurl: "http://git/api/v3/"
 ldap.host:      "ldap.example.com"
