Added delete for repos
- Adding web push group to cc on all emails.
- Adding version text to footer.
- Adding script to setup config file.
- Adding email.overide config param to force sending of all emails to that address.
- Cleanup.
- Missing spaces.
- Removing debug code.
- Working on cleaning up email handling for the push script.
- Updating push script to use DI container and HTML emails.

--- a/app/config.dev.yml
+++ b/app/config.dev.yml
@@ -12,6 +12,14 @@ github.baseurl: "http://git/api/v3/"
 ldap.host:      "ldap.example.com"
 ldap.domain:    "MI"
 ldap.baseDn:    "DC=mi,DC=corp"
+email.overide:  "matthewcolf@quickenloans.com"
+
+email.hostname:     mail.example.com
+email.subject:      "HAL9000 - {repo} [{status}][{env}][{server}]"
+email.notify:       "matthewcolf@quickenloans.com"
+email.notify.error: false
+build.log.level:    100
+build.log.name:     hal9000
 
 # These help with development
 
