--- a/app/config.prod.yml
+++ b/app/config.prod.yml
@@ -12,6 +12,14 @@ github.baseurl: "http://git/api/v3/"
 ldap.host:      "ldap.example.com"
 ldap.domain:    "MI"
 ldap.baseDn:    "DC=mi,DC=corp"
+email.overide:  false
+
+email.hostname:     mail.example.com
+email.subject:      "HAL9000 - {repo} [{status}][{env}][{server}]"
+email.notify:       "placeholder@quickenloans.com"
+email.notify.error: "placeholder@quickenloans.com"
+build.log.level:    100
+build.log.name:     hal9000
 
 # These help with development
 
