Adding exception to push permissions for hal admins and hal9000 repo.
- Playing with fork and exit.
- Redirecting all output from pusher script to dev/null for ease of foking. Maybe.
- Switching to MySQL based session storage.
- Remove "remove" feature from envs and servers
- Repo page pagination cleanup.
- Date formating cleanups for consistency.
- Adding contact details to user page. Making permissions list better reflect reality.
- Adding workaround for datetime output weirdness since it sometimes comes as a DateTime and sometimes as a string.
- Started working on a way to audit repo permissions. On a seperate page for now.
- Fixing email log format problem on build failure.
- Fixes to email log notification. Config file addition.
- Formatting fixes. Using array context instead of implode.

--- a/app/config.dev.yml
+++ b/app/config.dev.yml
@@ -6,6 +6,7 @@ db.user:        "root"
 db.pass:        ""
 build.user:     "mcolf"
 build.dir:      "/tmp"
+build.async:    false
 rsync.user:     "mcolf"
 github.token:   ""
 github.baseurl: "http://git/api/v3/"
