--- a/app/config.prod.yml
+++ b/app/config.prod.yml
@@ -1,11 +1,12 @@
 slim:
-  debug:        true
+  debug:        false
   mode:         "development"
 db.dsn:         "mysql:host=prod.example.com;dbname=hal9000;charset=utf8"
 db.user:        "placeholder"
 db.pass:        "placeholder"
 build.user:     "hal9000"
 build.dir:      "/var/spool/hal9000"
+build.async:    true
 rsync.user:     "placeholder"
 github.token:   ""
 github.baseurl: "http://git/api/v3/"
