Add prototype add repository js to base layout
- Add super awesome javascript github api form helper thing
- Add github api hack to enable grabbing paged results
- Add github api routes and config
- Add github api controllers
- Remove pager from github repos controller
- Add mockery
- Enable mockery listener in phpunit config
- Test is broken
- Add basic tests for api pages
- Make capitalization match
- Gracefully handle requesting repos for an invalid user
- Fixing user common id non-population issue on error pages (base template missing var).
- Remove unused github pager
- Add local dev caveats to README
- Make add repository select inputs look not horrible
- Add case insensitive sort and chop long descriptions
- Adding git-admin-prod push whitelist rule.
- Turning on debug for prod for a jiffy.
- Fixing string to DN bug.

--- a/app/di.yml
+++ b/app/di.yml
@@ -82,16 +82,16 @@ services:
     arguments: ["repo"]
 
   githubUserService:
-    class: 'Github\Api\User'
-    factory_service: 'github'
-    factory_method: 'api'
-    arguments: ['user']
+    class: 'QL\Hal\GithubApi\HackUser'
+    arguments: ['@github']
 
   githubOrgService:
     class: 'Github\Api\Organization'
     factory_service: 'github'
     factory_method: 'api'
     arguments: ['organization']
+
+  loginGuard: { class: 'QL\Hal\LoginGuard', arguments: ['@session', '@dic'] }
 
   # Pages
   login.twig: { arguments: ["login.twig"], class: "Twig_Template", factory_service: "twigEnv", factory_method: "loadTemplate" }
@@ -191,6 +191,14 @@ services:
   adminPermissionsPage:
     class:      'QL\Hal\Admin\ManagePermissions'
     arguments:  [@admin.permissions.twig, @repoService, @pushPermissionService, @layout]
+
+  adminGithubUsersApi:
+    class: 'QL\Hal\Admin\GithubApi\Users'
+    arguments: ['@githubUserService', '@session']
+
+  adminGithubReposApi:
+    class: 'QL\Hal\Admin\GithubApi\Repos'
+    arguments: ['@githubUserService', '@session']
 
   sync-code.twig: { arguments: ["sync-code.twig"], class: "Twig_Template", factory_service: "twigEnv", factory_method: "loadTemplate" }
   syncPage:
