--- a/app/routes.yml
+++ b/app/routes.yml
@@ -132,3 +132,12 @@
   "method":     "GET"
   "route":      "/admin/permissions"
   "stack":      ["loginBouncer", "adminBouncer", "adminPermissionsPage"]
+
+"admin_github_users":
+  "method":     "GET"
+  "route":      "/admin/github-users"
+  "stack":      ["loginBouncer", "adminBouncer", "adminGithubUsersApi"]
+"admin_github_repos":
+  "method":     "GET"
+  "route":      "/admin/github-repos/:username"
+  "stack":      ["loginBouncer", "adminBouncer", "adminGithubReposApi"]
