--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/yaml":                     "*"
     },
     "require-dev": {
+        "mockery/mockery":                  "*",
         "phpmd/phpmd":                      "*",
         "phpunit/phpunit":                  "3.7.*",
         "squizlabs/php_codesniffer":        "*"
@@ -25,7 +26,7 @@
         }
     },
     "repositories": [
-        {  
+        {
             "type": "composer",
             "url": "http://composer/"
         }
