--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -35,6 +35,10 @@
         </whitelist>
     </filter>
 
+    <listeners>
+        <listener class="\Mockery\Adapter\Phpunit\TestListener"></listener>
+    </listeners>
+
     <testsuites>
         <testsuite name="HAL 9000">
             <directory>../tests/QL/Hal</directory>
