--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,7 +2,7 @@
 <phpunit
         backupGlobals="false"
         backupStaticAttributes="false"
-        bootstrap="../vendor/autoload.php"
+        bootstrap="vendor/autoload.php"
         cacheTokens="true"
         colors="true"
         convertErrorsToExceptions="true"
@@ -21,17 +21,17 @@
 
     <!--
     <logging>
-        <log type="coverage-html" target="../phpunit/coverage" charset="UTF-8" highlight="true" lowUpperBound="50" highLowerBound="80"/>
-        <log type="coverage-clover" target="../phpunit/clover.xml"/>
+        <log type="coverage-html" target="phpunit/coverage" charset="UTF-8" highlight="true" lowUpperBound="50" highLowerBound="80"/>
+        <log type="coverage-clover" target="phpunit/clover.xml"/>
         <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
-        <log type="testdox-html" target="../phpunit/testdox.html"/>
-        <log type="testdox-text" target="../phpunit/testdox.txt"/>
+        <log type="testdox-html" target="phpunit/testdox.html"/>
+        <log type="testdox-text" target="phpunit/testdox.txt"/>
     </logging>
     -->
 
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory>../lib/</directory>
+            <directory>lib/</directory>
         </whitelist>
     </filter>
 
@@ -41,7 +41,7 @@
 
     <testsuites>
         <testsuite name="HAL 9000">
-            <directory>../tests/QL/Hal</directory>
+            <directory>tests/QL/Hal</directory>
         </testsuite>
     </testsuites>
 
