--- a/app/di.yml
+++ b/app/di.yml
@@ -72,6 +72,7 @@ services:
       - '@ldapService'
       - '@repoService'
       - '@userService'
+      - '@github'
       - '%debug.godmode%'
 
   github:
