Update github calls on the syncing pages
- The ref api call is now made for tags and branches, which
returns data in a slightly different manner. This will make it easier to add
the ability to push any ref (including pull requests).
- Dead GitHub link for tags on the sync page was fixed.
- SyncPage and SyncHandler now use the common GitHubApi client so we can
centralize all the try/catch api calls.

--- a/app/di.yml
+++ b/app/di.yml
@@ -53,7 +53,7 @@ services:
     arguments: ["@db"]
   syncOptions:
     class: "QL\\Hal\\Services\\SyncOptions"
-    arguments: ["@repoService", "@deploymentService", "@github.repoService"]
+    arguments: ["@repoService", "@deploymentService", "@github"]
 
 
 
@@ -80,6 +80,7 @@ services:
     arguments:
       - '@github.userService'
       - '@github.repoService'
+      - '@github.refService'
       - '@github.pager'
 
   github.client:
@@ -95,12 +96,15 @@ services:
     class: 'Github\ResultPager'
     arguments: ['@github.client']
 
-  github.repoService:
-    class: 'Github\Api\Repo'
-    arguments: ["@github.client"]
   github.orgService:
     class: 'Github\Api\Organization'
     arguments: ['@github.client']
+  github.refService:
+    class: 'Github\Api\GitData\References'
+    arguments: ['@github.client']
+  github.repoService:
+    class: 'Github\Api\Repo'
+    arguments: ["@github.client"]
   github.userService:
     class: 'QL\Hal\GithubApi\HackUser'
     arguments: ['@github.client']
